fix inspector del liveeventbroker chuck and delta
